Starting up controller generated from open api generator tool
